--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@ function OnLoadFunction() {
 body{
 	background-color:#f4f4f4;
 	color:#555555;
-
+	overflow-x: hidden;
 	font-family: Arial, Helvetica, sans-serif;
 	font-size:16px;
 	font-weight:normal;
@@ -406,7 +406,7 @@ body{
 
 		
 		<div class="box-1">
-			<h1> Touch Latency Tool @</h1>
+			<h3> Touch Latency Tool @</h3>
 			<span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776</span>
 		</div>
 		
@@ -414,7 +414,7 @@ body{
 		<div class="column left" style="background-color:lightblue;">
 		<h2> Touch Latency Test </h2>
 
-		<p> Touch Latency Test</p>
+		
 	
 		<span class="label other" id = "GFG" style="background-color:lightblue;" >Touch Time </span>
 		<br>
@@ -430,7 +430,7 @@ body{
 		</div>
 		<div class="column right" style="background-color:white;">
 		
-		<h2>Frame Window</h2>
+		
 		
 		<canvas id="myCanvas" width="1000" height="1000" style="border:0px solid #000000;"></canvas>
 		
